--- a/Views/NovoProduto.xaml
+++ b/Views/NovoProduto.xaml
@@ -2,11 +2,21 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1MinhasCompras.Views.NovoProduto"
-             Title="NovoProduto">
+             Title="Novo Produto">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Voltar" Clicked="Voltar_Clicked"/>
+        <ToolbarItem Text="Salvar" Clicked="ToolbarItem_Clicked"/>
+    </ContentPage.ToolbarItems> 
+    
+    
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Label Text="Descrição do produto" />
+        <Entry x:Name="txt_descricao"/>
+        <Label Text="Quantidade"/>
+        <Entry x:Name="txt_quantidade" Keyboard="Numeric"/>
+        <Label Text="Preço Unitário"/>
+        <Entry x:Name="txt_preco" Keyboard="Numeric"/>
+
     </VerticalStackLayout>
 </ContentPage>
