--- a/Views/EditarProduto.xaml
+++ b/Views/EditarProduto.xaml
@@ -2,11 +2,19 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="MauiApp1MinhasCompras.Views.EditarProduto"
-             Title="EditarProduto">
+             Title= "{Binding Descricao}">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Salvar" Clicked="ToolbarItem_Clicked" />
+    </ContentPage.ToolbarItems>
+
+
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Label Text="Descrição do produto" />
+        <Entry x:Name="txt_descricao" Text="{Binding Descricao}"/>
+        <Label Text="Quantidade"/>
+        <Entry x:Name="txt_quantidade" Text="{Binding Quantidade}" Keyboard="Numeric"/>
+        <Label Text="Preço Unitário"/>
+        <Entry x:Name="txt_preco" Text="{Binding Preco}" Keyboard="Numeric"/>
+
     </VerticalStackLayout>
 </ContentPage>
